[nan-391] fix tests

--- a/packages/cli/lib/templates/nango.yaml
+++ b/packages/cli/lib/templates/nango.yaml
@@ -1,6 +1,6 @@
 integrations:
   demo-github-integration:
-        scripts:
+        syncs:
             github-issue-example:
               description: |
                   Fetches the Github issues from all a user's repositories.
