--- a/packages/cli/lib/fixtures/nango-yaml/v2/nango.yaml
+++ b/packages/cli/lib/fixtures/nango-yaml/v2/nango.yaml
@@ -9,6 +9,7 @@ integrations:
         runs: every half hour
         scopes: public_repo
         output: GithubIssue
+        endpoint: /github/issues
         webhook-subscriptions:
           - issue.creation
       github-issue-example-two:
