--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "packages/server",
         "packages/runner",
         "packages/persist",
-        "packages/jobs"
+        "packages/jobs",
+        "packages/webapp"
     ],
     "scripts": {
         "create:migration": "cd packages/shared/lib/db && knex migrate:make $1 --esm --knexfile ./knexfile.cjs",
@@ -18,7 +19,6 @@
         "prettier-watch": "onchange './**/*.ts' -- prettier --write {{changed}}",
         "lint": "eslint . --ext .ts,.tsx",
         "lint:fix": "eslint . --ext .ts,.tsx --fix",
-        "install:all": "npm i && cd packages/webapp && npm i && cd ../..",
         "ts-build": "tsc -b --clean packages/shared packages/server packages/cli packages/runner packages/jobs packages/persist && tsc -b tsconfig.build.json && npm run postbuild -ws --if-present && tsc -b packages/webapp/tsconfig.json",
         "docker-build": "docker build -f packages/server/Dockerfile -t nango-server:latest .",
         "webapp-build:hosted": "cd ./packages/webapp && npm run build:hosted && cd ../..",
@@ -28,10 +28,10 @@
         "webapp-build:watch": "tsc -b -w packages/webapp/tsconfig.json",
         "shared:build": "cd ./packages/shared && npm run build && cd ../..",
         "shared:watch": "cd ./packages/shared && tsc -w",
-        "build:hosted": "npm run install:all && npm run ts-build && npm run webapp-build:hosted ",
-        "build:staging": "npm run install:all && npm run ts-build && npm run webapp-build:staging",
-        "build:prod": "npm run install:all && npm run ts-build && npm run webapp-build:prod",
-        "build:enterprise": "npm run install:all && npm run ts-build && npm run webapp-build:enterprise",
+        "build:hosted": "npm i && npm run ts-build && npm run webapp-build:hosted ",
+        "build:staging": "npm i && npm run ts-build && npm run webapp-build:staging",
+        "build:prod": "npm i && npm run ts-build && npm run webapp-build:prod",
+        "build:enterprise": "npm i && npm run ts-build && npm run webapp-build:enterprise",
         "server:dev:watch": "cd ./packages/server && npm run dev",
         "jobs:dev:watch": "npm run dev -w @nangohq/nango-jobs",
         "persist:dev:watch": "npm run dev -w @nangohq/nango-persist",
@@ -45,7 +45,6 @@
         "watch:dev:apps": "npm run dev:watch:apps",
         "dw": "npm run dev:watch",
         "dwa": "npm run dev:watch:apps",
-        "i": "npm run install:all",
         "test": "concurrently --kill-others \"npm run test:unit\" \"npm run test:integration\"",
         "test:unit": "vitest",
         "test:integration": "vitest --config ./vite.integration.config.ts",
