--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "webapp",
+    "name": "@nangohq/webapp",
     "version": "1.0.0",
     "private": true,
     "dependencies": {
@@ -63,9 +63,9 @@
         "@tailwindcss/forms": "^0.5.3",
         "@types/jest": "^27.5.2",
         "@types/js-cookie": "^3.0.3",
-        "@types/node": "^16.18.13",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.11",
+        "@types/node": "18.7.6",
+        "@types/react": "18.2.58",
+        "@types/react-dom": "18.2.19",
         "@types/react-helmet": "^6.1.8",
         "tailwindcss": "^3.2.7"
     },
