--- a/packages/webapp/tsconfig.json
+++ b/packages/webapp/tsconfig.json
@@ -1,7 +1,11 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "lib": ["dom", "dom.iterable", "esnext"],
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
         "allowJs": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
@@ -19,6 +23,12 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-    "references": [{ "path": "../frontend" }],
-    "include": ["src"]
+    "references": [
+        {
+            "path": "../frontend"
+        }
+    ],
+    "include": [
+        "src"
+    ]
 }
