--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
         "webapp-build:enterprise": "cd ./packages/webapp && npm run build:enterprise && cd ../..",
         "webapp-build:watch": "tsc -b -w packages/webapp/tsconfig.json",
         "shared:build": "cd ./packages/shared && npm run build && cd ../..",
-        "shared:watch": "cd ./packages/shared && tsc -w",
         "build:hosted": "npm i && npm run ts-build && npm run webapp-build:hosted ",
         "build:staging": "npm i && npm run ts-build && npm run webapp-build:staging",
         "build:prod": "npm i && npm run ts-build && npm run webapp-build:prod",
@@ -36,10 +35,9 @@
         "jobs:dev:watch": "npm run dev -w @nangohq/nango-jobs",
         "persist:dev:watch": "npm run dev -w @nangohq/nango-persist",
         "webapp:dev:watch": "cd ./packages/webapp && npm run start:hosted",
-        "cli:watch": "cd ./packages/cli && npm run dev",
         "prepare": "husky install",
-        "build:watch": "tsc -b -w tsconfig.build.json",
-        "dev:watch": "concurrently --kill-others \"npm run build:watch\" \"npm run webapp-build:watch\" \"npm run prettier-watch\" \"npm run shared:watch\" \"npm run cli:watch\"",
+        "build:watch": "tsc -b -w --preserveWatchOutput tsconfig.build.json",
+        "dev:watch": "npm run -w nango copyfiles && npm run build:watch",
         "watch:dev": "npm run dev:watch",
         "dev:watch:apps": "concurrently --kill-others \"npm run server:dev:watch\" \"npm run webapp:dev:watch\" \"npm run jobs:dev:watch\" \"npm run persist:dev:watch\"",
         "watch:dev:apps": "npm run dev:watch:apps",
