--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -2013,6 +2013,94 @@ integrations:
         mobilePhone: string
         licenseType: string
         language: string
+  teamtailor:
+    syncs:
+      teamtailor-candidates:
+        runs: every 6 hours
+        description: |
+            Fetches a list of all candidates from your teamtailor account.
+            Details: full sync, doesn't track deletes, metadata is not required.
+        output: TeamtailorCandidate
+        sync_type: full
+        endpoint: /teamtailor-candidates/candidates
+        scopes:
+          - Admin
+    models:
+      TeamtailorCandidate:
+        id: string
+        type: string
+        links:
+          self: string
+        attributes:
+          connected: boolean
+          consent_future_jobs_at: date
+          created_at: date
+          updated_at: date
+          email: string
+          facebook_id: string
+          facebook_profile: string
+          first_name: string
+          internal: boolean
+          last_name: string
+          linkedin_profile: string
+          linkedin_uid: string
+          linkedin_url: string
+          original_resume: string
+          phone: string
+          picture: string
+          pitch: string
+          referring_site: string
+          referring_url: string
+          referred: boolean
+          resume: string
+          sourced: boolean
+          tags: array
+          unsubscribed: boolean
+        relationships:
+          activities:
+            links:
+              self: string
+              related: string
+          department:
+            links:
+              self: string
+              related: string
+          role:
+            links:
+              self: string
+              related: string
+          regions:
+            links:
+              self: string
+              related: string
+          job_applications:
+            links:
+              self: string
+              related: string
+          questions:
+            links:
+              self: string
+              related: string
+          answers:
+            links:
+              self: string
+              related: string
+          locations:
+            links:
+              self: string
+              related: string
+          uploads:
+            links:
+              self: string
+              related: string
+          custom_field_values:
+            links:
+              self: string
+              related: string
+          partner_results:
+            links:
+              self: string
+              related: string
   workable:
     syncs:
       workable-candidates:
