--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1822,6 +1822,18 @@ teamwork:
     proxy:
         base_url: https://${connectionConfig.subdomain}${connectionConfig.extension}.teamwork.com
     docs: https://docs.nango.dev/integrations/all/teamwork
+teamtailor:
+    categories:
+        - ats
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://api.na.teamtailor.com
+        retry:
+            after: 'X-Rate-Limit-Reset'
+        headers:
+            Authorization: Token token=${apiKey}
+            X-Api-Version: '20210218'
+    docs: https://docs.nango.dev/integrations/all/teamtailor
 tiktok-accounts:
     categories:
         - social
