[nan-437] feedback and documentation

--- a/docs-v2/spec.yaml
+++ b/docs-v2/spec.yaml
@@ -1094,6 +1094,11 @@ paths:
                       type: string
                   description: The number of retries in case of failure (with exponential back-off). Optional, default 0.
                 - in: header
+                  name: Retry On
+                  schema:
+                      type: string
+                  description: Comma separated status codes to explicitly retry on in addition to the default 5xx and 429.
+                - in: header
                   name: Base-Url-Override
                   schema:
                       type: string
