--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "test": "concurrently --kill-others \"npm run test:unit\" \"npm run test:integration\"",
         "test:unit": "vitest",
         "test:integration": "vitest --config ./vite.integration.config.ts",
-        "docs": "cd ./docs-v2 && mintlify dev --port 3033",
+        "docs": "cd ./docs-v2 && npx mintlify dev --port 3033",
         "nango": "cd ./packages/server && npm run nango",
         "dev:docker": "docker compose --file dev/docker-compose.dev.yaml up -d"
     },
