test with localhost

--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -90,36 +90,33 @@ jobs:
                 image: nangohq/nango-runner:${{ github.event.pull_request.head.sha || github.sha }}
                 ports:
                   - 3006:3006
+
         runs-on: ubuntu-latest
         steps:
             - name: Test server
               run: |
-                curl -XGET http://server:3001/health
-                if curl -s http://server:3001/health | grep -q "{"result":"ok"}"; then
+                if curl -s http://localhost:3001/health | grep -q "{"result":"ok"}"; then
                     exit 0
                 else
                     exit 1
                 fi
             - name: Test persist
               run: |
-                curl -XGET http://persist:3001/health
-                if curl -s http://persist:3001/health | grep -q "{"status":"ok"}"; then
+                if curl -s http://localhost:3002/health | grep -q "{"status":"ok"}"; then
                     exit 0
                 else
                     exit 1
                 fi
             - name: Test jobs
               run: |
-                curl -XGET http://jobs:3001/health
-                if curl -s http://jobs:3001/health | grep -q "{"status":"ok"}"; then
+                if curl -s http://localhost:3003/health | grep -q "{"status":"ok"}"; then
                     exit 0
                 else
                     exit 1
                 fi
             - name: Test runner
               run: |
-                curl -XGET http://runner:3001/health
-                if curl -s http://runner:3001/health | grep -q "{"status":"ok"}"; then
+                if curl -s http://localhost:3006/health | grep -q "{"status":"ok"}"; then
                     exit 0
                 else
                     exit 1
