--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -97,49 +97,54 @@ jobs:
                     SERVER_PORT: 3001
                 ports:
                   - 3001:3001
-            # persist:
-            #     image: nangohq/nango-persist:${{ github.event.pull_request.head.sha || github.sha }}
-            #     env:
-            #         NANGO_PERSIST_PORT: 3002
-            #     ports:
-            #       - 3002:3002
-            #     options: >-
-            #       --health-cmd "curl -s --fail http://localhost:3002/health || exit 1"
-            #       --health-interval 5s
-            #       --health-timeout 5s
-            #       --health-retries 3
-            # jobs:
-            #     image: nangohq/nango-jobs:${{ github.event.pull_request.head.sha || github.sha }}
-            #     env:
-            #         NANGO_JOBS_PORT: 3003
-            #     ports:
-            #       - 3003:3003
-            #     options: >-
-            #       --health-cmd "curl -s --fail http://localhost:3003/health || exit 1"
-            #       --health-interval 5s
-            #       --health-timeout 5s
-            #       --health-retries 3
-            # runner:
-            #     image: nangohq/nango-runner:${{ github.event.pull_request.head.sha || github.sha }}
-            #     ports:
-            #       - 3006:3006
-            #     options: >-
-            #       --health-cmd "curl -s --fail http://localhost:3006/health || exit 1"
-            #       --health-interval 5s
-            #       --health-timeout 5s
-            #       --health-retries 3
+                options: >-
+                  --health-cmd "curl -s --fail http://localhost:3001/health || exit 1"
+                  --health-interval 5s
+                  --health-timeout 5s
+                  --health-retries 3
+            persist:
+                image: nangohq/nango-persist:${{ github.event.pull_request.head.sha || github.sha }}
+                env:
+                    NANGO_PERSIST_PORT: 3002
+                ports:
+                  - 3002:3002
+                options: >-
+                  --health-cmd "curl -s --fail http://localhost:3002/health || exit 1"
+                  --health-interval 5s
+                  --health-timeout 5s
+                  --health-retries 3
+            jobs:
+                image: nangohq/nango-jobs:${{ github.event.pull_request.head.sha || github.sha }}
+                env:
+                    NANGO_JOBS_PORT: 3003
+                ports:
+                  - 3003:3003
+                options: >-
+                  --health-cmd "curl -s --fail http://localhost:3003/health || exit 1"
+                  --health-interval 5s
+                  --health-timeout 5s
+                  --health-retries 3
+            runner:
+                image: nangohq/nango-runner:${{ github.event.pull_request.head.sha || github.sha }}
+                ports:
+                  - 3006:3006
+                options: >-
+                  --health-cmd "curl -s --fail http://localhost:3006/health || exit 1"
+                  --health-interval 5s
+                  --health-timeout 5s
+                  --health-retries 3
 
         runs-on: ubuntu-latest
         steps:
             - name: Test server
               run: |
                 exit $(curl -sS http://localhost:3001/health | grep -q "{.result.:.ok.}")
-            # - name: Test persist
-            #   run: |
-            #     exit $(curl -sS http://localhost:3002/health | grep -q "{.status.:.ok.}")
-            # - name: Test jobs
-            #   run: |
-            #     exit $(curl -sS http://localhost:3003/health | grep -q "{.status.:.ok.}")
-            # - name: Test runner
-            #   run: |
-            #     exit $(curl -sS http://localhost:3006/health | grep -q "{.status.:.ok.}")
+            - name: Test persist
+              run: |
+                exit $(curl -sS http://localhost:3002/health | grep -q "{.status.:.ok.}")
+            - name: Test jobs
+              run: |
+                exit $(curl -sS http://localhost:3003/health | grep -q "{.status.:.ok.}")
+            - name: Test runner
+              run: |
+                exit $(curl -sS http://localhost:3006/health | grep -q "{.status.:.ok.}")
