--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -80,28 +80,17 @@ jobs:
                 --health-timeout 5s
                 --health-retries 5
 
-            temporal:
-              image: temporalio/auto-setup
-              env:
-                DB: postgres
-                DB_PORT: 5432
-                POSTGRES_USER: nango
-                POSTGRES_PWD: nango
-                POSTGRES_SEEDS: nango-db
-              ports:
-                  - 7233:7233
-
-            server:
-                image: nangohq/nango-server:staging-${{ github.event.pull_request.head.sha || github.sha }}
-                env:
-                    SERVER_PORT: 3001
-                ports:
-                  - 3001:3001
-                options: >-
-                  --health-cmd "curl -s --fail http://localhost:3001/health || exit 1"
-                  --health-interval 5s
-                  --health-timeout 5s
-                  --health-retries 3
+            # server:
+            #     image: nangohq/nango-server:staging-${{ github.event.pull_request.head.sha || github.sha }}
+            #     env:
+            #         SERVER_PORT: 3001
+            #     ports:
+            #       - 3001:3001
+            #     options: >-
+            #       --health-cmd "curl -s --fail http://localhost:3001/health || exit 1"
+            #       --health-interval 5s
+            #       --health-timeout 5s
+            #       --health-retries 3
             persist:
                 image: nangohq/nango-persist:${{ github.event.pull_request.head.sha || github.sha }}
                 env:
@@ -113,26 +102,26 @@ jobs:
                   --health-interval 5s
                   --health-timeout 5s
                   --health-retries 3
-            jobs:
-                image: nangohq/nango-jobs:${{ github.event.pull_request.head.sha || github.sha }}
-                env:
-                    NANGO_JOBS_PORT: 3003
-                ports:
-                  - 3003:3003
-                options: >-
-                  --health-cmd "curl -s --fail http://localhost:3003/health || exit 1"
-                  --health-interval 5s
-                  --health-timeout 5s
-                  --health-retries 3
-            runner:
-                image: nangohq/nango-runner:${{ github.event.pull_request.head.sha || github.sha }}
-                ports:
-                  - 3006:3006
-                options: >-
-                  --health-cmd "curl -s --fail http://localhost:3006/health || exit 1"
-                  --health-interval 5s
-                  --health-timeout 5s
-                  --health-retries 3
+            # jobs:
+            #     image: nangohq/nango-jobs:${{ github.event.pull_request.head.sha || github.sha }}
+            #     env:
+            #         NANGO_JOBS_PORT: 3003
+            #     ports:
+            #       - 3003:3003
+            #     options: >-
+            #       --health-cmd "curl -s --fail http://localhost:3003/health || exit 1"
+            #       --health-interval 5s
+            #       --health-timeout 5s
+            #       --health-retries 3
+            # runner:
+            #     image: nangohq/nango-runner:${{ github.event.pull_request.head.sha || github.sha }}
+            #     ports:
+            #       - 3006:3006
+            #     options: >-
+            #       --health-cmd "curl -s --fail http://localhost:3006/health || exit 1"
+            #       --health-interval 5s
+            #       --health-timeout 5s
+            #       --health-retries 3
 
         runs-on: ubuntu-latest
         steps:
