--- a/.eslintrc
+++ b/.eslintrc
@@ -2,37 +2,53 @@
     "root": true,
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "impliedStrict": true,
-        "jsx": true
-      },
-      "project": false
+        "ecmaVersion": 2018,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "impliedStrict": true,
+            "jsx": true
+        },
+        "project": "tsconfig.json"
     },
     "plugins": [
-      "@typescript-eslint",
-      "react",
-      "react-hooks"
+        "@typescript-eslint",
+        "react",
+        "react-hooks"
     ],
     "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:@typescript-eslint/strict",
-      "plugin:@typescript-eslint/stylistic",
-      "plugin:react/recommended",
-      "plugin:react/jsx-runtime",
-      "plugin:prettier/recommended",
-      "plugin:react-hooks/recommended"
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended-type-checked",
+        "plugin:@typescript-eslint/strict",
+        "plugin:@typescript-eslint/stylistic",
+        "plugin:react/recommended",
+        "plugin:react/jsx-runtime",
+        "plugin:prettier/recommended",
+        "plugin:react-hooks/recommended"
     ],
     "rules": {
-      "no-console": 1,       // Means warning
-      "prettier/prettier": 2,
-
-      "@typescript-eslint/no-inferrable-types": "off",
-
-      // Previously warn but now errors
-      "@typescript-eslint/no-non-null-assertion": "warn",
-      "@typescript-eslint/no-explicit-any": "warn"
+        "no-console": 1, // Means warning
+        "prettier/prettier": 2,
+        "@typescript-eslint/no-inferrable-types": "off",
+        // Previously warn but now errors
+        "@typescript-eslint/no-non-null-assertion": "warn",
+        "@typescript-eslint/no-explicit-any": "warn",
+        // To reenable as error progressively
+        "@typescript-eslint/require-await": "warn",
+        "@typescript-eslint/no-floating-promises": "warn",
+        "@typescript-eslint/no-unsafe-assignment": "warn",
+        "@typescript-eslint/no-unsafe-member-access": "warn",
+        "@typescript-eslint/no-unsafe-call": "warn",
+        "@typescript-eslint/no-unsafe-argument": "warn",
+        "@typescript-eslint/no-misused-promises": "warn",
+        "@typescript-eslint/no-unsafe-return": "warn",
+        "@typescript-eslint/no-empty-function": "warn",
+        "@typescript-eslint/no-unsafe-enum-comparison": "warn",
+        "@typescript-eslint/restrict-template-expressions": "warn",
+        "@typescript-eslint/no-unused-vars": "warn",
+        "@typescript-eslint/await-thenable": "warn",
+        "@typescript-eslint/no-invalid-void-type": "warn",
+        "@typescript-eslint/no-base-to-string": "warn",
+        "@typescript-eslint/restrict-plus-operands": "warn"
     }
 }
