[nan-457] add scripts/config

--- a/docs-v2/spec.yaml
+++ b/docs-v2/spec.yaml
@@ -551,6 +551,175 @@ paths:
                                     message:
                                         type: string
 
+    /scripts/config:
+        get:
+            description: Return the configuration for all scripts
+            responses:
+                '200':
+                    description: Successfully returned scripts config
+                    content:
+                      application/json:
+                        schema:
+                          type: object
+                          properties:
+                            providerConfigKey:
+                              type: string
+                            syncs:
+                              type: array
+                              items:
+                                type: object
+                                properties:
+                                  name:
+                                    type: string
+                                    example: "github-issues"
+                                  type:
+                                    type: string
+                                    example: "sync"
+                                  models:
+                                    type: array
+                                    items:
+                                      type: object
+                                      properties:
+                                        name:
+                                          type: string
+                                          example: "GithubIssue"
+                                        fields:
+                                          type: array
+                                          items:
+                                            type: object
+                                              name:
+                                                type: string
+                                                example: "id"
+                                              type:
+                                                type: string
+                                                example: "integer"
+                                  sync_type:
+                                    type: string
+                                    example: "FULL"
+                                  runs:
+                                    type: string
+                                    example: "every half hour"
+                                  track_deletes:
+                                    type: boolean
+                                    example: false
+                                  auto_start:
+                                    type: boolean
+                                    example: false
+                                  last_deployed:
+                                    type: string
+                                    example: "2024-02-28T20:16:38.052Z"
+                                  is_public:
+                                    type: boolean
+                                    example: false
+                                  pre_built:
+                                    type: boolean
+                                    example: false
+                                  version:
+                                    type: string
+                                    example: "4"
+                                  attributes:
+                                    type: object
+                                  input:
+                                    type: object
+                                  returns:
+                                    type: array
+                                    items:
+                                      type: string
+                                      example: "GithubIssue"
+                                  description:
+                                    type: string
+                                    example: "Fetches the Github issues from all a user's repositories.\nDetails: full sync, doesn't track deletes, metadata is not required.\n"
+                                  scopes:
+                                    type: array
+                                    items:
+                                      type: string
+                                      example: "public_repo"
+                                  endpoints:
+                                    type: array
+                                    items:
+                                      type: object
+                                  nango_yaml_version:
+                                    type: string
+                                    example: "v2"
+                                  webhookSubscriptions:
+                                    type: array
+                            actions:
+                              type: array
+                              items:
+                                type: object
+                                properties:
+                                  name:
+                                    type: string
+                                    example: "github-issues"
+                                  type:
+                                    type: string
+                                    example: "sync"
+                                  models:
+                                    type: array
+                                    items:
+                                      type: object
+                                      properties:
+                                        name:
+                                          type: string
+                                          example: "GithubIssue"
+                                        fields:
+                                          type: array
+                                          items:
+                                            type: object
+                                              name:
+                                                type: string
+                                                example: "id"
+                                              type:
+                                                type: string
+                                                example: "integer"
+                                  last_deployed:
+                                    type: string
+                                    example: "2024-02-28T20:16:38.052Z"
+                                  is_public:
+                                    type: boolean
+                                    example: false
+                                  pre_built:
+                                    type: boolean
+                                    example: false
+                                  version:
+                                    type: string
+                                    example: "4"
+                                  attributes:
+                                    type: object
+                                  input:
+                                    type: object
+                                  returns:
+                                    type: string
+                                  description:
+                                    type: string
+                                    example: "Fetches the Github issues from all a user's repositories.\nDetails: full sync, doesn't track deletes, metadata is not required.\n"
+                                  scopes:
+                                    type: array
+                                    items:
+                                      type: string
+                                      example: "public_repo"
+                                  endpoints:
+                                    type: array
+                                    items:
+                                      type: object
+                                  nango_yaml_version:
+                                    type: string
+                                    example: "v2"
+                            postConnectionScripts:
+                              type: array
+                            provider:
+                              type: string
+                              example: "github"
+                '400':
+                    description: Invalid request
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+
     /records:
         get:
             description: Returns data synced with Nango Sync
